[tool.poetry]
name = "lazyfront"
version = "0.1.0"
description = "FastAPI project, that say hi throw login"
authors = ["danimir <nexe1054@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.111.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
